# shoppistant-server

./: .env.example  .gitignore  .mcp.json  API_DOCS.md  BACKEND_API_REQUIREMENTS.md  BACKEND_MIGRATION_GUIDE.md  CLAUDE.md  Dockerfile.main  Dockerfile.mcp  Dockerfile.playwright  IMAGE_CHAT_IMPLEMENTATION.md  MESSAGE_STATUS_UPDATE.md  PLAYWRIGHT_MCP_INTEGRATION.md  README.md  REFACTORING_REPORT.md  add_ai_model_column.sql  add_cost_column.sql  add_daily_requests_log.sql  add_image_data_column.sql  add_message_status_field.sql  create_site_scripts_table.sql  daily-request-limit-client-guide.md  database_helper.py  docker-compose.yml  env_example_refactored.txt  fix_site_scripts_rls.sql  image-chat-backend-spec.md  imweb-mcp-server.py  main.py  mcp-server.py  pyproject.toml  requirements.txt  test_image_chat.py  test_refactoring.py  test_script_apis.py  test_two_stage_ai.py
.github/workflows/: deploy.yml
docs/: operations-runbook.md  subscription-test-matrix.md
sql/: draft_content_migration.md
src/app/: database_helper.py  main.py  main_refactored.py  schemas.py
src/app/core/: __init__.py  base_service.py  config.py  container.py  factory.py  interfaces.py  membership_config.py  middleware.py  model_catalog.py  rate_limit_middleware.py  responses.py  scheduler.py  token_calculator.py
src/app/prompts/: __init__.py  bren_assistant_prompt.py
src/app/routers/: __init__.py  admin_router.py  auth_router.py  membership_router.py  (+8 more)
src/mcp/: imweb-mcp-server.py
src/playwright-mcp/: server.py
tests/services/: test_membership_service.py  test_paddle_billing_client.py
(+42 files in other folders)
